Revision history for JSON-Schema-Draft201909

{{$NEXT}}
          - fix validation regex for the $anchor keyword
          - unevaluatedItems and unevaluatedProperties keywords are now
            applied after all other keywords in the applicator vocabulary
            (true/false results are not affected, but the order of annotations
            and errors will change)

0.027     2021-05-15 18:13:21Z
          - fixed error strings used for failing "dependentRequired"
          - in terse output format, do not discard non-summary errors from
            schema-form of items
          - keywords in the applicator vocabulary are now applied before the
            keywords in the validation vocabulary (true/false results are not
            affected, but the order of annotations and errors will change)
          - improved validation of the "date-time", "date" and "time" formats

0.026     2021-04-08 20:13:27Z
          - fix scoping of annotations from uncle keywords (siblings of the
            schema's parent) that were improperly visible to unevaluatedItems,
            unevaluatedProperties
          - 'result' attribute in JSON::Schema::Draft201909::Result has been
            renamed to 'valid', to better match what it represents (a boolean)

0.025     2021-03-30 05:36:14Z
          - minor changes to error strings to distinguish between issues that
            can be determined from static inspection of schema(s), and those
            that only arise during runtime evaluation (such as URIs that
            map to missing schema documents, or inconsistent configuration
            values).
          - more validity checks at traversal time of $ref, $schema,
            $vocabulary values
          - update ipv4 format validation to reject leading zeroes in octets,
            helping avoid a newly-discovered vulnerability in netmasks

0.024     2021-03-23 21:53:42Z
          - the default value for "validate_formats" is once again false (it